--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     height: auto;
     background: #be3144;
     padding: 10px;
-    position: fixed;
+    position: fixed; 
     width: 100%;
 }
 
@@ -32,4 +32,41 @@ nav li a {
     display: inline;
     text-decoration: none;
     float: right;
+}
+
+#welcome-section{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+width: 100%;
+height: 100vh;
+color:white;
+background-color: #000;
+background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+}
+
+#profile-link{
+    text-decoration: none;
+    color: white;
+}
+
+
+
+#projects{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 4rem;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    margin-bottom: 6rem;
+}
+
+
+@media screen and (max-width: 600px) {
+    body{
+        background-color: coral;
+        color: black;
+    }
 }
