--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,15 @@ background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
     color: white;
 }
 
-
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 4rem;
+    width: 100%;
+    max-width: 1280px;
+    margin: 40px auto;
+    margin-bottom: 6rem;
+    }
 
 #projects{
     display: grid;
@@ -61,6 +69,38 @@ background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
     max-width: 1280px;
     margin: 0 auto;
     margin-bottom: 6rem;
+}
+
+.project-title {
+    text-align: center;
+    text-decoration: none;
+    font-size: 2rem;
+    padding: 2rem 0.5rem;
+  }
+
+#footer-section {
+    font-size: 28px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #303841;
+    width: 100%;
+    height: 200px;
+    transition: 0.2s;
+}
+
+#footer-section a {
+    padding: 10px;
+    transition: 0.3s;
+}
+
+#footer-section a i {
+    margin: 10px;
+}
+
+#footer-section:hover a {
+    font-size: 36px;
 }
 
 
